# aniShows

./: TODO  pyproject.toml
anime/: admin.py  models.py  urls.py  views.py
anime/static/anime/css/: anime_list_style.css
core/: urls.py  views.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  anime.py  user.py
core/static/core/css/: home_page_style.css  style.css
reviews/: models.py
root/: settings.py  urls.py
templates/: base.html
templates/anime/: anime_list_page.html  header.html  home_page.html
templates/auth/: login_page.html  register_page.html
templates/components/: anime_card.html  empty_state.html  filter_pills.html
templates/core/: header.html  home_page.html
theme/static_src/: package-lock.json
users/: models.py  urls.py  views.py
users/static/users/css/: login_page.css
